# CourseWork4

./: README.md  main.py  pyproject.toml
src/: file_worker.py  load_vacancies.py  user_interactive.py  vacancy.py
